--- a/TinyHelper.csproj
+++ b/TinyHelper.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessTools.cs" />
+    <Compile Include="Effects\AddNewStatusEffectRandom.cs" />
     <Compile Include="Effects\CooldownChangeEffect.cs" />
     <Compile Include="Effects\EquipSkillDurabilityCondition.cs" />
     <Compile Include="Effects\UseMana.cs" />
@@ -140,6 +141,7 @@
     <Compile Include="Effects\AddThenSpreadStatus.cs" />
     <Compile Include="Effects\EmptyOffHandCondition.cs" />
     <Compile Include="Effects\InputEnablerEffect.cs" />
+    <Compile Include="TinyHelperHelpers.cs" />
     <Compile Include="TinyUnofficialPatches.cs" />
     <Compile Include="WeaponSpeeds.cs" />
     <Compile Include="Managers\TinyTagManager.cs" />
