--- a/TinyHelper.csproj
+++ b/TinyHelper.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Effects\AddNewStatusEffectRandom.cs" />
     <Compile Include="Effects\CooldownChangeEffect.cs" />
     <Compile Include="Effects\EquipSkillDurabilityCondition.cs" />
+    <Compile Include="Effects\AffectCorruption.cs" />
     <Compile Include="Effects\UseMana.cs" />
     <Compile Include="Effects\SpecificImbueCondition.cs" />
     <Compile Include="Effects\ExtendedAddStatusEffect.cs" />
