--- a/TinyHelper.csproj
+++ b/TinyHelper.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Effects\UseMana.cs" />
     <Compile Include="Effects\SpecificImbueCondition.cs" />
     <Compile Include="Effects\ExtendedAddStatusEffect.cs" />
+    <Compile Include="Extensions\AnimatorExtension.cs" />
     <Compile Include="Managers\TinyCharacterManager.cs" />
     <Compile Include="Managers\TinyDialogueManager.cs" />
     <Compile Include="Managers\TinyGameObjectManager.cs" />
