--- a/TinyHelper.csproj
+++ b/TinyHelper.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessTools.cs" />
+    <Compile Include="EffectConditions\ForbiddenWeaponTypeCondition.cs" />
     <Compile Include="EffectConditions\QuestKnowledgeCondition.cs" />
     <Compile Include="EffectConditions\StatusEffectsCondition.cs" />
     <Compile Include="Effects\AddNewStatusEffectRandom.cs" />
@@ -152,7 +153,7 @@
     <Compile Include="Effects\ShootBlastFromEffect.cs" />
     <Compile Include="Effects\ToggleEffect.cs" />
     <Compile Include="Effects\AddThenSpreadStatus.cs" />
-    <Compile Include="Effects\EmptyOffHandCondition.cs" />
+    <Compile Include="EffectConditions\EmptyOffHandCondition.cs" />
     <Compile Include="Effects\InputEnablerEffect.cs" />
     <Compile Include="TinyHelpers.cs" />
     <Compile Include="TinyUnofficialPatches.cs" />
