--- a/TinyHelper.csproj
+++ b/TinyHelper.csproj
@@ -123,6 +123,7 @@
     <Compile Include="EffectConditions\QuestKnowledgeCondition.cs" />
     <Compile Include="EffectConditions\StatusEffectsCondition.cs" />
     <Compile Include="Effects\AddNewStatusEffectRandom.cs" />
+    <Compile Include="Effects\PunctualDamageSecondaryScaling.cs" />
     <Compile Include="Effects\EnableHitDetection.cs" />
     <Compile Include="Effects\RemoveItemFromInventory.cs" />
     <Compile Include="Effects\CooldownChangeEffect.cs" />
